--- a/style.css
+++ b/style.css
@@ -117,9 +117,9 @@ h2 {}
 h3 {}
 
 .title {
-    margin-left: 20%;
+    margin-left: 85%;
     margin-right: 20%;
-    width: 100%;
+    width: 110%;
     border-radius: 10px;
     background-color: lightgrey;
 }
@@ -175,7 +175,7 @@ ul {
 }
 
 .space {
-    width: 50%;
+    width: 23.5%;
 }
 
 .flip {
@@ -187,8 +187,8 @@ ul {
 
 .inner {
     position: relative;
-    width: 100%;
-    height: 50%;
+    width: 60%;
+    height: 55%;
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
@@ -218,7 +218,17 @@ ul {
 }
 
 .im {
-    margin-top: auto;
+    font-size: 30px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: purple;
+    width: 36px;
+    height: 36px;
+    padding: 8px;
+    margin-top: 5%;
+    margin-left: 43%;
+    margin-right: 47%;
+    background-color: #A1D6E2;
+    border-radius: 50%;
     bottom: auto;
     display: flex;
     justify-content: center;
