--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ label {
 
 input {
     font-family: "Cinzel";
-    background-color: #cb6ce6;
-    color: rgb(100, 100, 100);
+    background-color: #7753a2;
+    color: rgb(255, 255, 255);
 }
 
 ul {
@@ -157,7 +157,7 @@ ul {
     display: block;
     width: 5%;
     border-radius: 10px;
-    background-color: #8c52ff;
+    background-color: #309db6;
 }
 
 .imgwrap {
@@ -168,34 +168,40 @@ ul {
 }
 
 .over {
-    display: flex;
+    display:flex;
+    gap: 10%;
     height: 100%;
     width: 100%;
     margin-left: 5%;
 }
 
-.space {
-    width: 23.5%;
-}
-
 .flip {
     background-color: transparent;
-    width: 500px;
-    height: 600px;
+    width: 270px;
+    height: 275px;
     perspective: 1000px;
+}
+
+.fm {
+    margin-top: 2%;
+    margin-left: 45%;
+    margin-right: 45%;
+    width: 10%;
+    border-radius: 10px;
+    background-color: lightgrey;
 }
 
 .inner {
     position: relative;
-    width: 60%;
-    height: 55%;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.4s;
     transform-style: preserve-3d;
 }
 
 .flip:hover .inner {
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) scale(1.2);
 }
 
 .front {
@@ -232,4 +238,34 @@ ul {
     bottom: auto;
     display: flex;
     justify-content: center;
+}
+
+.space {
+    margin-top: 15%;
+    display:flex;
+    gap: 10%;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+}
+
+.log {
+    background-color: #309db6;
+    border-radius: 10px;
+    height: 500px;
+    width: 500px;
+}
+
+.sign {
+    background-color: #309db6;
+    border-radius: 10px;
+    height: 500px;
+    width: 500px;
+}
+
+.a2 {
+    background-color: #7753a2;
+    font-size: 30px;
+    border-radius: 10px;
+    padding: 2%;
 }
