--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ button {
     border: none;
     /*background-color: #cb6ce6;*/
     color: white;
+    background-color: #282828;
     padding: 15px;
     font-size: 1.3rem;
     border-radius: 12px;
@@ -42,7 +43,8 @@ button {
 }
 
 .grey2 {
-    background-color: darkgrey;
+    background-color: transparent;
+    border-radius: 5px;
 }
 
 .rightm {
@@ -110,18 +112,24 @@ body {
     margin-right: 10%;
 }
 
-h1 {}
+h1 {
+    color: aliceblue;
+}
 
-h2 {}
+h2 {
+    color: aliceblue;
+}
 
-h3 {}
+h3 {
+    color: aliceblue;
+}
 
 .title {
     margin-left: 85%;
     margin-right: 20%;
     width: 110%;
     border-radius: 10px;
-    background-color: lightgrey;
+    background-color: #282828;
 }
 
 footer {
@@ -142,8 +150,9 @@ label {
 }
 
 input {
+    border-radius: 5px;
     font-family: "Cinzel";
-    background-color: #7753a2;
+    background-color: transparent;
     color: rgb(255, 255, 255);
 }
 
@@ -157,7 +166,7 @@ ul {
     display: block;
     width: 5%;
     border-radius: 10px;
-    background-color: #309db6;
+    background-color: #282828;
 }
 
 .imgwrap {
@@ -188,7 +197,7 @@ ul {
     margin-right: 45%;
     width: 10%;
     border-radius: 10px;
-    background-color: lightgrey;
+    background-color: #282828;
 }
 
 .inner {
@@ -205,12 +214,12 @@ ul {
 }
 
 .front {
-    background-color: #309db6;
+    background-color: #282828;
     border-radius: 10px;
 }
 
 .back {
-    background-color: #7753a2;
+    background-color: #343434;
     transform: rotateY(180deg);
     border-radius: 10px;
 }
@@ -226,14 +235,14 @@ ul {
 .im {
     font-size: 30px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: purple;
+    color: aliceblue;
     width: 36px;
     height: 36px;
     padding: 8px;
     margin-top: 5%;
     margin-left: 43%;
     margin-right: 47%;
-    background-color: #A1D6E2;
+    background-color: #343434;
     border-radius: 50%;
     bottom: auto;
     display: flex;
@@ -241,19 +250,18 @@ ul {
 }
 
 .space {
-    margin-top: 15%;
+    margin-top: 6%;
     display:flex;
-    gap: 10%;
     height: 100%;
     width: 100%;
     justify-content: center;
 }
 
 .log {
-    background-color: #309db6;
-    border-radius: 10px;
-    height: 500px;
-    width: 500px;
+    background-color: #222222;
+    border-radius: 5px;
+    height: 950px;
+    width: 550px;
 }
 
 .sign {
@@ -264,8 +272,46 @@ ul {
 }
 
 .a2 {
-    background-color: #7753a2;
-    font-size: 30px;
-    border-radius: 10px;
+    background-color: #3771a3;
+    width: 500px;
+    font-size: 25px;
+    border-radius: 5px;
+    margin-top: -5%;
     padding: 2%;
+    margin-right: 25px;
+}
+
+.d {
+    padding-top: 60%;
+}
+
+.bg {
+    background-color: #181818;
+}
+
+.hi {
+    font-size: 20px;
+    border-radius: 5px;
+    background-color: transparent; 
+}
+
+.a3 {
+    font-size: 20px;
+    border-radius: 10px;
+    text-decoration: underline;
+}
+
+.hd {
+    margin-top: 200px;
+}
+
+.logo {
+    margin-top: 0%;
+    margin-bottom: -30%;
+}
+
+.hd2 {
+    color: aliceblue;
+    font-size: 30px;
+    margin-top: 30px;
 }
